--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
             You don't have to keep looking at this page. You can put the browser in the background, and it'll keep playing and informing you about the far future as you go on about your day.
           </li>
           <li>
+          <!--
             For listening convenience, <a href="https://jimkang.bandcamp.com/album/the-sound-of-the-far-future">stream or download a recording at Bandcamp</a>.
+          -->
+            For future listening convenience, <a href="https://jimkang.bandcamp.com/follow_me">follow me on Bandcamp</a> to get notified when the album is out so you can stream or download it on any device.
           </li>
         </ul>
         <button id="start-button">Start</button>
       </section>
 
       <section class="instructions no-webaudio-intro hidden">
-        Your device doesn't have the Web Audio support we need to perform live. Fortunately, you can just <a href="https://jimkang.bandcamp.com/album/the-sound-of-the-far-future">listen to the album</a> on Bandcamp!
+        Your device doesn't have the Web Audio support we need to perform live. <!--Fortunately, you can just <a href="https://jimkang.bandcamp.com/album/the-sound-of-the-far-future">listen to the album</a> on Bandcamp!--> <a href="https://jimkang.bandcamp.com/follow_me">Follow me on Bandcamp</a> to get notified when the album is out, which can be listened to on anything!
       </section>
       </section>
 
